Keep undeleted translog files in directory (#1962)
Files need to be retained in the directory until they are deleted. If
they are removed from the directory before the cluster consistency is
checked then a stale node can publish a new translog file missing
required references.